index on master: 7a5a417 chore: update dependencies to the latest version

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,5 +20,10 @@
   "[json][jsonc]": {
     "editor.formatOnSave": true,
     "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "workbench.colorCustomizations": {
+    "activityBar.background": "#17340B",
+    "titleBar.activeBackground": "#20490F",
+    "titleBar.activeForeground": "#F5FCF2"
   }
 }
