--- a/package.json
+++ b/package.json
@@ -19,10 +19,25 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/server": "^11.4.0",
+    "@mantine/core": "^5.0.0",
+    "@mantine/hooks": "^5.0.0",
+    "@mantine/next": "^5.0.0",
+    "@react-three/drei": "^9.18.0",
+    "@react-three/fiber": "^8.2.2",
+    "@types/dat.gui": "^0.7.7",
+    "@types/three": "^0.143.0",
+    "dat.gui": "^0.7.9",
+    "maath": "^0.0.2",
     "next": "^12.2.2",
     "next-seo": "^5.4.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
+    "sass": "^1.54.0",
+    "three": "^0.143.0",
+    "three-custom-shader-material": "^4.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
