--- a/package.json
+++ b/package.json
@@ -26,16 +26,19 @@
     "@mantine/next": "^5.0.0",
     "@react-three/drei": "^9.18.0",
     "@react-three/fiber": "^8.2.2",
+    "@tabler/icons": "^1.78.1",
     "@types/dat.gui": "^0.7.7",
     "@types/three": "^0.143.0",
     "dat.gui": "^0.7.9",
     "maath": "^0.0.2",
     "next": "^12.2.2",
     "next-seo": "^5.4.0",
+    "rc-progress": "^3.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "sass": "^1.54.0",
+    "styled-components": "^5.3.5",
     "three": "^0.143.0",
     "three-custom-shader-material": "^4.0.0"
   },
@@ -49,6 +52,7 @@
     "@types/jest": "^28.1.5",
     "@types/node": "^18.0.4",
     "@types/react": "^18.0.15",
+    "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
     "autoprefixer": "^10.4.7",
