--- a/.eslintrc
+++ b/.eslintrc
@@ -12,7 +12,15 @@
         "singleQuote": true,
         "endOfLine": "auto"
       }
-    ]
+    ],
+
+    "tailwindcss/classnames-order": "warn",
+    "tailwindcss/enforces-negative-arbitrary-values": "warn",
+    "tailwindcss/enforces-shorthand": "warn",
+    "tailwindcss/migration-from-tailwind-2": "warn",
+    "tailwindcss/no-arbitrary-value": "warn",
+    "tailwindcss/no-custom-classname": "off",
+    "tailwindcss/no-contradicting-classname": "error"
   },
   "overrides": [
     // Configuration for TypeScript files
@@ -55,9 +63,12 @@
         "@typescript-eslint/no-unused-vars": "off",
         "unused-imports/no-unused-imports": "error",
         "unused-imports/no-unused-vars": [
-          "error",
+          "warn",
           { "argsIgnorePattern": "^_" }
-        ]
+        ],
+        "@typescript-eslint/no-use-before-define": "warn",
+        "react/display-name": "off",
+        "react/no-unescaped-entities": "warn"
       }
     },
     // Configuration for testing
