--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@types/three": "^0.143.0",
     "dat.gui": "^0.7.9",
     "maath": "^0.0.2",
-    "next": "^12.2.2",
+    "next": "12.2.2",
     "next-seo": "^5.4.0",
     "rc-progress": "^3.4.0",
     "react": "^18.2.0",
@@ -49,8 +49,8 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@types/jest": "^28.1.5",
-    "@types/node": "^18.0.4",
-    "@types/react": "^18.0.15",
+    "@types/node": "18.0.4",
+    "@types/react": "18.0.15",
     "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
